package protocol;

message FieldValue {
  optional string string_value = 1;
  optional double double_value = 3;
  optional bool bool_value = 4;
  optional int64 int64_value = 5;
}

message Point {
  repeated FieldValue values = 1;
  optional int64 timestamp = 2;
  optional uint32 sequence_number = 3;
}

message Series {
  repeated Point points = 1;
  required string name = 2;
  repeated string fields = 3;
}

message Request {
  enum Type {
    QUERY = 1;
    REPLICATION_WRITE = 2;
    PROXY_WRITE = 3;
    REPLICATION_DELETE = 4;
    PROXY_DELETE = 5;
  }
  required uint32 id = 1;
  required Type type = 2;
  required string database = 3;
  optional Series series = 4;
  optional string query = 5;
}

message Response {
  enum Type {
    QUERY = 1;
    WRITE_OK = 2;
    END_STREAM = 3;
  }
  enum ErrorCode {
    REQUEST_TOO_LARGE = 1;
  }
  required Type type = 1;
  required uint32 request_id = 2;
  optional Series series = 3;
  optional ErrorCode error_code = 4;
  optional string error_message = 5;
}
